# VasculitisFigures

./: .gitignore  README.md  data_handler.py  main.py  overview.py  plotting.py  pyproject.toml  rois.py
data/: vasculitis.data.csv  vasculitis.data.xlsx
