[project]
name = "vasculitsfigures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pathlib>=1.0.1",
    "radimgarray",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
]

[tool.uv]

[tool.uv.sources]
radimgarray = { git = "https://github.com/darksim33/RadImgArray/" }
